Update and rename 2009-10-01-paper-title-number-1.md to 2018-06-06-energies.md

--- a/_publications/2018-06-06-energies.md
+++ b/_publications/2018-06-06-energies.md
@@ -2,8 +2,8 @@
 title: "Dual-Side Independent Switched Capacitor Control for Wireless Power Transfer with Coplanar Coils"
 collection: publications
 category: manuscripts
-permalink: /publication/2009-10-01-paper-title-number-1
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+permalink: /publication/2018-06-06-energies
+excerpt: 'This paper is about independent TX and RX control to stable resonant frequency of each by using switched capacitors.'
 date: 2018-06-06
 venue: 'Energies'
 #slidesurl: 'https://academicpages.github.io/files/slides1.pdf'
